Fixed mobile spacing

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,6 +17,12 @@ input {
 	flex-flow: row wrap;
 }
 
+@media (max-width: 800px) {
+    .emojis:not(.favorites) {
+		justify-content: space-around;
+	}
+}
+
 .emoji {
 	font-size: 1.5rem;
 	padding: 0.5rem;
